--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
 DSN=host=localhost user=postgres password=postgres dbname=wallet sslmode=disable
 Host=localhost
 Port=8080
+Rabbit=amqp://guest:guest@localhost:5672/
